# estudos-lp3

./: README.md
00-estudo-git/: comando-git.txt
01-intro-python/exercícios/: ex1.py  ex2.py  ex3.py
02-funcoes/: 01-intro-funcoes.py
02-funcoes/exercicios/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py
03-modulos-pacotes/exercicios/ex1/: aquario.py  index.py
03-modulos-pacotes/exercicios/ex2/: imc.py  index.py
03-modulos-pacotes/exercicios/flask/ex1/: pyproject.toml
03-modulos-pacotes/exercicios/flask/ex1/ex1/: app.py
03-modulos-pacotes/exercicios/flask/ex1/ex1/static/: style.css
03-modulos-pacotes/exercicios/flask/ex1/ex1/templates/: CPF.html  home.html  layout.html
03-modulos-pacotes/exercicios/flask/ex2/: pyproject.toml
03-modulos-pacotes/exercicios/flask/ex2/ex2/: app.py
03-modulos-pacotes/exercicios/flask/ex2/ex2/static/: style.css
03-modulos-pacotes/exercicios/flask/ex2/ex2/templates/: CNPJ.html  home.html  layout.html
03-modulos-pacotes/exercicios/flask/ex3/: pyproject.toml
03-modulos-pacotes/exercicios/flask/ex3/ex3/: app.py
03-modulos-pacotes/exercicios/flask/ex3/ex3/static/: global.css  main.css  paper.css
03-modulos-pacotes/exercicios/flask/ex3/ex3/templates/: como-utilizar.html  contato.html  home.html  layout-main.html  layout-paper.html  layout.html  politica-de-privacidade.html  produtos.html  termos-de-uso.html
