[tool.poetry]
name = "ex2"
version = "0.1.0"
description = ""
authors = ["Leandro Kenzo Takara <leandroktkr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
validate-docbr = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
